Version 1.9.8
- BUG: GDI leak in repobrowser. (Stefan)
- BUG: Endless loop in vendor-branch. (Stefan)
- CHG: New line margin icons and minor high dpi refinements
       in TortoiseMerge. (Ivan Zhakov)
- BUG: Right click in touch mode wasn't working. (Stefan)

Version 1.9.7
- BUG: Drag copy-and-add did not add auto-properties. (Stefan)

Version 1.9.6
- BUG: Crash when applying a patch from a drive root. (Stefan)
- BUG: SubWCRev did not account for global
       ignore patterns. (Stefan)
- BUG: TortoiseMerge jumped to the wrong line on startup
       if the view was collapsed. (Stefan)
- BUG: TortoiseMerge: scale whitespace and newline symbol glyphs on High-DPI
       displays when Show Whitespaces option is enabled. (Ivan Zhakov)
- CHG: Minor performance improvement for all operations when status cache is
       disabled. (Ivan Zhakov)
- CHG: Improve startup performance of the update operation in common
       cases. (Ivan Zhakov)
- CHG: Manifest TortoiseBlame and TortoiseUDiff as DPI-aware to avoid
       blurriness in high dpi mode. (Ivan Zhakov)
- BUG: Icons in the log dialog filter do not render correctly in
       high dpi mode. (Ivan Zhakov)
- BUG: Flickering mouse cursor when hovering over the log filter
       edit box. (Ivan Zhakov)
- CHG: New action icons and minor high dpi refinements in the log
       dialog. (Ivan Zhakov)
- BUG: changes to property-only items were not marked in
       the log dialog file list. (Stefan)
- BUG: SubWCRevCOM choked on empty paths. (Stefan)
- BUG: the filter in the recent messages dialog failed to
       work with uppercase letters. (Stefan)

Version 1.9.5
- BUG: The "go to next diff" in TortoiseMerge stopped at
       lines filtered with a regex. (Stefan)
- BUG: Changing the font in TortoiseMerge wasn't taking
       effect until a restart. (Stefan)
- BUG: When a filter was active in TMerge, filtered lines
       could still be handled as a diff. (Stefan)
- BUG: Changing the font in TMerge required a restart